rio-macros/tests/ui_fail/with_id.rs
use rio_macros::*;

#[derive(Default, WithId)]
struct StructWithId {
    name: String,
}

fn main() {}
